@@ -1,3 +1,15 @@
+2012-11-09  Earnie Boyd  <earnie@users.sourceforge.net>
+
+	https://sourceforge.net/tracker/?func=detail&aid=3559134&group_id=2435&atid=102435
+
+	* include/wincrypt.h (CertEnumCRLsInStore): Add declaration.
+	* lib/lib32/crypt32.def (CertEnumCRLsInStore): Add import definition.
+
+2012-11-09  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	* include/_mingw.h (_MINGW_H): Revert to consistent use of...
+	(__MINGW_H): ...this, as multiple inclusion guard macro.
+
 2012-10-31  Earnie Boyd  <earnie@users.sourceforge.net>
 
 	https://sourceforge.net/tracker/?func=detail&aid=3408074&group_id=2435&atid=102435
